--- a/LibreTV.html
+++ b/LibreTV.html
@@ -243,7 +243,12 @@
 					  { name:"细胞资源", url:"https://www.xxibaozyw.com/" },
 					  { name:"鲨鱼资源", url:"https://shayuzy.com/" },
 					  { name:"小鸡资源", url:"https://api.xiaojizy.live/" },
-					  { name:"木瓜AC", url:"https://www.fczy907.com/" }
+					  { name:"木瓜AC", url:"https://www.fczy907.com/" },
+					  { name:"桃花资源", url:"https://thzy4.me/" },
+					  { name:"色逼资源", url:"https://laosebizy.com/" },
+					  { name:"番号资源", url:"http://fhzy10.com/" },
+					  { name:"大地资源", url:"https://dadizy11.com/" },
+					  { name:"优优资源", url:"https://www.yyzywcj.com/" }
                 ]
             }
         ];
