--- a/LibreTV.html
+++ b/LibreTV.html
@@ -205,6 +205,9 @@
             {
                 type: "nonAdult",
                 sites: [
+					  { name: " AGE动漫", url: "https://www.agedm.vip" },
+					  { name: "555电影", url: "https://www.5wwcdf80.life/" },
+					  { name: "厂长资源", url: "https://www.cz4k.com/" },
 					  { name: "七七资源", url: "https://www.qiqidys.com/" },
 					  { name:"非凡资源", url:"http://ffzy5.tv/" },
 					  { name:"樱花资源", url:"https://yhzy.cc/" },
