--- a/Tool.html
+++ b/Tool.html
@@ -177,53 +177,15 @@
             {
                 type: "nonAdult",
                 sites: [
-                    { name: " AGE动漫", url: "https://www.agedm.vip" },
-                    { name: "555电影", url: "https://www.5wwcdf80.life/" },
-                    { name: "厂长资源", url: "https://www.cz4k.com/" },
-                    { name: "七七资源", url: "https://www.qiqidys.com/" },
-                    { name:"非凡资源", url:"http://ffzy5.tv/" },
-                    { name:"樱花资源", url:"https://yhzy.cc/" },
-                    { name:"暴风资源", url:"https://bfzyapi.com/" },
-                    { name:"电影天堂", url:"https://caiji.dyttzyapi.com/" },
-                    { name:"如意资源", url:"https://cj.rycjapi.com/" },
-                    { name:"360资源", url:"https://360zy.com/" },
-                    { name:"极速资源", url:"https://jszyapi.com/" },
-                    { name:"魔爪资源", url:"https://mozhuazy.com/" },
-                    { name:"最大资源", url:"https://api.zuidapi.com/" },
-                    { name:"无尽资源", url:"https://api.wujinapi.me/" },
-                    { name:"iKun资源", url:"https://ikunzyapi.com/" },
-                    { name:"CK资源", url:"https://ckzy.me/" },
-                    { name:"茅台资源", url:"https://caiji.maotaizy.cc/" },
-                    { name:"猫眼资源", url:"https://api.maoyanapi.top/" }
+                    { name: " AGE动漫", url: "https://www.agedm.vip" }
+
                 ]
             },
             {
                 type: "adult",
                 sites: [
-                    { name:"森林资源", url:"https://slapibf.com/" },
-                    { name:"麻豆资源", url:"https://www.bt4.cc/" },
-                    { name:"91资源", url:"https://91md.me/" },
-                    { name:"辣椒资源", url:"https://apilj.com/" },
-                    { name:"souav资源", url:"https://api.souavzy.vip/" },
-                    { name:"jkun资源", url:"https://jkunzyapi.com/" },
-                    { name:"百万资源", url:"https://api.bwzyz.com/" },
-                    { name:"155资源", url:"https://155api.com/" },
-                    { name:"lsb资源", url:"https://apilsbzy1.com/" },
-                    { name:"黄色仓库", url:"https://hsckzy.vip/" },
-                    { name:"玉兔资源", url:"https://yutuzy10.com/" },
-                    { name:"快播资源", url:"https://gayapi.com/" },
-                    { name:"杏吧资源", url:"https://xingba222.com/" },
-                    { name:"91jpzyw", url:"https://91jpzyw.com/" },
-                    { name:"大奶资源", url:"https://apidanaizi.com/" },
-                    { name:"细胞资源", url:"https://www.xxibaozyw.com/" },
-                    { name:"鲨鱼资源", url:"https://shayuzy.com/" },
-                    { name:"小鸡资源", url:"https://api.xiaojizy.live/" },
-                    { name:"木瓜AC", url:"https://www.fczy907.com/" },
-                    { name:"桃花资源", url:"https://thzy4.me/" },
-                    { name:"色逼资源", url:"https://laosebizy.com/" },
-                    { name:"番号资源", url:"http://fhzy10.com/" },
-                    { name:"大地资源", url:"https://dadizy11.com/" },
-                    { name:"优优资源", url:"https://www.yyzywcj.com/" }
+                    { name:"森林资源", url:"https://slapibf.com/" }
+
                 ]
             }
         ];
